Realize en ingles y español el inicio de session y corregi la catualizacion del perfil de usuario

--- a/digital_events_repository/web/SI/administrador/perfil/perfil.xhtml
+++ b/digital_events_repository/web/SI/administrador/perfil/perfil.xhtml
@@ -100,7 +100,7 @@
                                     </h:form>
                                 </div>
                                 <div class="card-footer">                            
-                                    <h:commandLink action="#{usuarioController.actualizar()}" class="btn btn-primary btn-block">#{administrador_usuarios.lbl_actualizar_usuario}</h:commandLink> 
+                                    <h:commandLink action="#{usuarioController.actualizar(u)}" class="btn btn-primary btn-block">#{administrador_usuarios.lbl_actualizar_usuario}</h:commandLink> 
                                 </div>
                             </h:form>
                         </div>
