--- a/digital_events_repository/web/SI/administrador/usuarios/registrar.xhtml
+++ b/digital_events_repository/web/SI/administrador/usuarios/registrar.xhtml
@@ -112,7 +112,7 @@
                                                     <h:inputText id="confirmarClave" value="#{usuarioController.confirmarClave}"
                                                                  a:type="password" 
                                                                  class="form-control"  
-                                                                 a:placeholder="#{administrador_usuarios.lbl_confirmar_contraseña}" a:required=""/>
+                                                                 a:placeholder="#{administrador_usuarios.lbl_confirmar_contraseña}" />
                                                 </div>
                                             </div>
                                             <div class="form-group row">
